Enhance Recommender Server with Security Logging and Improved Test Coverage
- Added SecurityLogger initialization in RecommenderServerApplication for enhanced security logging.
- Updated error handling to direct users to server logs for fatal errors.
- Expanded unit tests in RecommenderServerTest to cover various scenarios including consensus logic, space availability, and error handling.
- Refactored test methods for clarity and added assertions for edge cases.
- Updated docker-compose.yml to include RabbitMQ certificate paths and security log paths for each recommender service instance.
- Introduced dedicated log volumes for each recommender service to facilitate better log management.